fix: pricing, z-index, testimoni, hero

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -94,7 +94,7 @@
 
 @layer base {
 	* {
-		@apply border-border outline-ring/50;
+		@apply border-border outline-ring/50 text-pretty;
 	}
 	body {
 		@apply bg-background text-foreground;
